feat: add push event workflow for SHA retrieval
- Rename job `get-sha` to `get-sha-on-pr` for clarity
- Add new job `get-sha-on-push` triggered by push events
- Both jobs output the commit SHA based on event type

--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -7,9 +7,20 @@ on:
 #The commit SHA that triggered the workflow. The value of this commit SHA depends on the event that
 #triggered the workflow.
 jobs:
-  get-sha:
+  get-sha-on-pr:
     if: github.event_name == 'pull_request'
     name: Get SHA over Pull Request
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Get SHA
+        run: |
+          echo "SHA: ${{github.sha}}"
+
+  get-sha-on-push:
+    name: Get SHA on push event
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
