--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Get SHA
         run: |
-          echo "SHA: ${{github.sha}}"
+          echo "SHA on pull request ( on branch ${{github.ref}}): ${{github.sha}}" >> SHAs.md
 
   get-sha-on-push:
     name: Get SHA on push event
@@ -27,4 +27,4 @@ jobs:
         uses: actions/checkout@v2
       - name: Get SHA
         run: |
-          echo "SHA: ${{github.sha}}"
+          echo "SHA on push event ( on branch ${{github.ref}}): ${{github.sha}}" >> SHAs.md
