feat: add git status and pull before push in commit action
- Add `git status` after staging files to show what will be committed
- Add `git pull` before push to ensure local branch is up-to-date
- Comment out push step (likely for debugging/testing purposes)

--- a/.github/actions/git-commit/action.yml
+++ b/.github/actions/git-commit/action.yml
@@ -25,10 +25,13 @@ runs:
 
     - name: Stage files
       shell: bash
-      run: git add ${{ inputs.file_pattern }}
+      run: |
+        git add ${{ inputs.file_pattern }}
+        git status
 
     - name: Commit and Push
       shell: bash
       run: |
         git commit -m "${{ inputs.commit_message }}" || exit 0
-        git push origin HEAD:${{ inputs.branch_name }}
+        git pull origin ${{ inputs.branch_name }}
+      # git push origin HEAD:${{ inputs.branch_name }}
