--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           file_pattern: SHAs.md
           commit_message: "chore: update build log [skip ci]"
-          branch_name: ${{ github.head_ref }}
+          branch_name: main
 
   get-sha-on-push:
     name: Get SHA on push event
