--- a/.github/actions/git-commit/action.yml
+++ b/.github/actions/git-commit/action.yml
@@ -12,7 +12,7 @@ inputs:
 
   branch_name:
     description: "The branch name to push to"
-    required: true
+    required: false
 
 runs:
   using: "composite"
@@ -26,6 +26,7 @@ runs:
     - name: Stage files
       shell: bash
       run: |
+        git checkout -b pushyy
         git add ${{ inputs.file_pattern }}
         git status
 
@@ -33,4 +34,4 @@ runs:
       shell: bash
       run: |
         git commit -m "${{ inputs.commit_message }}" || exit 0
-        git push origin HEAD:${{ inputs.branch_name }}
+        git push origin pushyy
