--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Get SHA
         run: |
-          echo "SHA on pull request ( on branch ${{github.ref}}): ${{github.sha}}" >> SHAs.md
+          echo "SHA on pull request ( on branch ${{github.ref}}): ${{github.sha}}" >> README.md
 
       - name: Save file in local repo
         uses: ./.github/actions/git-commit
@@ -39,4 +39,4 @@ jobs:
         uses: actions/checkout@v4
       - name: Get SHA
         run: |
-          echo "SHA on push event ( on branch ${{github.ref}}): ${{github.sha}}" >> SHAs.md
+          echo "SHA on push event ( on branch ${{github.ref}}): ${{github.sha}}" >> README.md
