--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Save file in local repo
         uses: ./.github/actions/git-commit
         with:
-          file_pattern: SHAs.md
+          file_pattern: README.md
           commit_message: "chore: update build log [skip ci]"
           # branch_name: main
 
