feat: enhance git-commit action with configurable branch handling
- Add `branch_name` input parameter with fallback to "pushyy"
- Implement smart checkout logic that handles existing and new branches
- Add safety measures with git stash to preserve generated files
- Include remote synchronization with pull/rebase for existing branches
- Update push command to use configurable branch name

--- a/.github/actions/git-commit/action.yml
+++ b/.github/actions/git-commit/action.yml
@@ -26,12 +26,43 @@ runs:
     - name: Stage files
       shell: bash
       run: |
-        git checkout -b pushyy
+        TARGET_BRANCH="${{ inputs.branch_name }}"
+        if [ -z "$TARGET_BRANCH" ]; then TARGET_BRANCH="pushyy"; fi
+
+        echo "Preparing to push to branch: $TARGET_BRANCH"
+
+        git fetch origin $TARGET_BRANCH || true
+
+        # 3. SAFETY: Stash the generated file so it doesn't get overwritten during checkout
+        # We add it first so stash knows about it
+        git add ${{ inputs.file_pattern }}
+        git stash push -m "temp_storage"
+
+        # 4. Smart Checkout Logic
+        # Try to checkout existing branch (tracking remote), otherwise create new one
+        if git checkout $TARGET_BRANCH 2>/dev/null; then
+          echo "Checked out existing branch $TARGET_BRANCH"
+          # IMPORTANT: Pull latest remote changes to prevent push errors
+          git pull origin $TARGET_BRANCH --rebase || true
+        else
+          echo "Branch does not exist. Creating new orphan branch..."
+          # Use --orphan if you want a clean history, or -b to branch off main
+          git checkout -b $TARGET_BRANCH
+        fi
+
+        # 5. Bring the file back
+        # '|| true' allows it to continue even if there's a merge conflict marker (which we overwrite next anyway)
+        git stash pop || true
+
+        # 6. Final Stage
         git add ${{ inputs.file_pattern }}
         git status
 
     - name: Commit and Push
       shell: bash
       run: |
+        TARGET_BRANCH="${{ inputs.branch_name }}"
+        if [ -z "$TARGET_BRANCH" ]; then TARGET_BRANCH="pushyy"; fi
+
         git commit -m "${{ inputs.commit_message }}" || exit 0
-        git push origin pushyy
+        git push origin $TARGET_BRANCH
