--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -3,6 +3,12 @@ name: Pull Request on main
 on:
   pull_request:
     branches: ["main"]
+  push:
+    branches: ["main"]
+
+permissions:
+  contents: write
+  pull-requests: write
 
 permissions:
   contents: write
