--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -10,6 +10,10 @@ permissions:
   contents: write
   pull-requests: write
 
+permissions:
+  contents: write
+  pull-requests: write
+
 #The commit SHA that triggered the workflow. The value of this commit SHA depends on the event that
 #triggered the workflow.
 jobs:
